hphp/test/zend/good/ext-openssl/bug41353.php
<?php

$a = 2;
openssl_pkcs12_read(1, $a, 1);

echo "Done\n";
?>